--- a/NewsApp/app/src/main/res/layout/activity_login_screen.xml
+++ b/NewsApp/app/src/main/res/layout/activity_login_screen.xml
@@ -46,10 +46,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
-                android:layout_marginTop="48dp"
-                android:text="Already Have an Account?"
+                android:layout_marginTop="55dp"
+                android:text="Login"
                 android:textColor="@android:color/white"
-                android:textSize="30sp"
+                android:textSize="40sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/imageView5"
                 app:layout_constraintHorizontal_bias="0.0"
