--- a/NewsApp/app/src/main/res/layout/activity_register_screen.xml
+++ b/NewsApp/app/src/main/res/layout/activity_register_screen.xml
@@ -49,9 +49,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="48dp"
-                android:text="Don't Have an Account? Create One."
+                android:text="Register"
                 android:textColor="@android:color/white"
-                android:textSize="30sp"
+                android:textSize="40sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toStartOf="@+id/imageView5"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -174,7 +174,7 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="32dp"
-                android:text="@string/forgot_password"
+                android:text="Forgot Password?"
                 android:textColor="@color/colorPrimary"
                 android:textSize="18sp"
                 android:textStyle="bold"
@@ -187,7 +187,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="Gold user?Login now"
+                android:text="Already have an account?"
                 android:onClick="login"
                 android:textSize="18sp"
                 android:textStyle="bold"
