--- a/NewsApp/app/src/main/res/layout/activity_reset_screen.xml
+++ b/NewsApp/app/src/main/res/layout/activity_reset_screen.xml
@@ -40,8 +40,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="48dp"
-        android:text="Forgot password?Don't Worry! Always Be Happy"
+        android:layout_marginTop="65dp"
+        android:text="Forgot password?"
         android:textColor="@android:color/white"
         android:textSize="30sp"
         android:textStyle="bold"
