--- a/NewsApp/app/src/main/res/layout/activity_account.xml
+++ b/NewsApp/app/src/main/res/layout/activity_account.xml
@@ -49,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="48dp"
-                android:text="Hi , User "
+                android:text="Hello, User "
                 android:textColor="@android:color/white"
                 android:textSize="30sp"
                 android:textStyle="bold"
@@ -78,42 +78,47 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/view5"
                 android:drawableLeft="@drawable/ic_pp" />
+
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
-                android:layout_marginTop="60dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="32dp"
                 android:background="@drawable/round_border"
                 android:drawableStart="@drawable/ic_ph"
+                android:drawableLeft="@drawable/ic_ph"
                 android:drawablePadding="16dp"
                 android:ems="10"
                 android:hint="Phone number"
                 android:inputType="number"
                 android:padding="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/view5"
-                android:drawableLeft="@drawable/ic_ph" />
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
+
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
-                android:layout_marginTop="120dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="32dp"
                 android:background="@drawable/round_border"
                 android:drawableStart="@drawable/ic_email"
+                android:drawableLeft="@drawable/ic_email"
                 android:drawablePadding="16dp"
                 android:ems="10"
                 android:hint="@string/email"
                 android:inputType="textEmailAddress"
                 android:padding="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/view5"
-                android:drawableLeft="@drawable/ic_email" />
+                app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
             <Button
                 android:id="@+id/Edit"
                 android:layout_width="0dp"
