--- a/NewsApp/app/src/main/res/layout/activity_search.xml
+++ b/NewsApp/app/src/main/res/layout/activity_search.xml
@@ -17,6 +17,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="5dp"
         android:queryHint="Search"
+        android:paddingLeft="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
