--- a/NewsApp/app/src/main/res/layout/activity_splash_screen.xml
+++ b/NewsApp/app/src/main/res/layout/activity_splash_screen.xml
@@ -11,15 +11,7 @@
         android:layout_width="180dp"
         android:layout_height="180dp"
         android:layout_centerInParent="true"
-        android:src="@drawable/ll"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="All You Need Is Here"
-        android:textColor="@color/colorPrimary"
-        android:textSize="40dp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"/>
+        android:src="@drawable/ll"
+        />
 
 </RelativeLayout>
