--- a/NewsApp/app/src/main/res/layout/activity_update_screen.xml
+++ b/NewsApp/app/src/main/res/layout/activity_update_screen.xml
@@ -55,7 +55,9 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/topView"
                 app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginLeft="32dp" />
+                android:layout_marginLeft="32dp"
+                android:layout_marginBottom="5dp"
+                />
 
             <EditText
                 android:id="@+id/name"
@@ -67,6 +69,8 @@
                 android:drawableStart="@drawable/ic_pp"
                 android:drawablePadding="16dp"
                 android:ems="10"
+
+                android:layout_marginBottom="5dp"
                 android:hint="Full name"
                 android:inputType="text"
                 android:padding="16dp"
@@ -74,42 +78,47 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/view5"
                 android:drawableLeft="@drawable/ic_pp" />
+
             <EditText
                 android:id="@+id/phone"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
-                android:layout_marginTop="60dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="32dp"
                 android:background="@drawable/round_border"
                 android:drawableStart="@drawable/ic_ph"
+                android:drawableLeft="@drawable/ic_ph"
                 android:drawablePadding="16dp"
                 android:ems="10"
                 android:hint="Phone number"
                 android:inputType="number"
                 android:padding="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/view5"
-                android:drawableLeft="@drawable/ic_ph" />
+                app:layout_constraintTop_toBottomOf="@+id/name" />
+
             <TextView
                 android:id="@+id/email"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
-                android:layout_marginTop="120dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="32dp"
                 android:background="@drawable/round_border"
                 android:drawableStart="@drawable/ic_email"
+                android:drawableLeft="@drawable/ic_email"
                 android:drawablePadding="16dp"
                 android:ems="10"
-                android:hint="@string/email"    
+                android:hint="@string/email"
                 android:inputType="textEmailAddress"
                 android:padding="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/view5"
-                android:drawableLeft="@drawable/ic_email" />
+                app:layout_constraintTop_toBottomOf="@+id/phone" />
+
             <Button
                 android:id="@+id/btnLogin"
                 android:layout_width="0dp"
