--- a/NewsApp/app/src/main/res/values/colors.xml
+++ b/NewsApp/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#0099ff</color>
-    <color name="colorPrimaryDark">#0099ff</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimaryDark">#0D92EC</color>
+    <color name="colorAccent">#06496E</color>
 
     <color name="colorBackground">#F2F2F2</color>
     <color name="colorTextSubtitle">#4e4e4e</color>
